--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,9 @@ button {
 .card {
 	display: flex;
 	flex-direction: column;
+	gap: 8px;
 	text-align: center;
-	width: 160px;
+	width: 180px;
 	font-size: 18px;
 	color: #1F2937
 }
@@ -99,6 +100,8 @@ button {
 .cardimg {
 	border: 4px solid #3882f6;
 	border-radius: 16px;
+	height: 172px;
+	width: 172px;
 }
 
 .quote {
